# air-supply

./: LICENSE  README.md  questions.txt
.github/: copilot-instructions.md
backend/: Makefile  README.md  pyproject.toml
backend/data/: country_code.csv
backend/system_store/: config.py  system_store.py
backend/tariff/: api.py  base_repo.py  config.py  country_code_repo.py  hs_code_repo.py  models.py
backend/tests/: conftest.py  test_base_repo.py  test_country_code_repo.py  test_hs_code_repo.py  test_singleton.py  test_system_store.py  test_tariff.py  test_vector_store.py
backend/utils/: singleton.py
backend/vector_store/: config.py  docker-compose.yaml  vector_store.py
