[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-postgres>=0.0.15",
    "pandas>=2.3.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "sentence-transformers>=5.1.0",
    "xmltodict>=0.14.2",
]
